# gaussian-hsmm

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: algorithm.md  api.md  index.md
examples/: basic_usage.py  multiple_sequences.py
src/gaussian_hsmm/: __init__.py  model.py
tests/: test_model.py  test_validation.py
