[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussian-hsmm"
dynamic = ["version"]
description = "A scikit-learn-style Gaussian hidden semi-Markov model with explicit durations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Suryathirukonda" },
]
maintainers = [
  { name = "Suryathirukonda" },
]
keywords = [
  "hidden semi-markov model",
  "explicit duration model",
  "hsmm",
  "time series",
  "machine learning",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed",
]
dependencies = [
  "hmmlearn>=0.3.2",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5",
]
dev = [
  "build>=1.2",
  "check-manifest>=0.50",
  "mypy>=1.11",
  "pre-commit>=4",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff==0.16.0",
  "twine>=5",
  "validate-pyproject[all]>=0.24",
]

[project.urls]
Homepage = "https://github.com/SuryaThirukonda/gaussian-hsmm"
Documentation = "https://github.com/SuryaThirukonda/gaussian-hsmm#readme"
Repository = "https://github.com/SuryaThirukonda/gaussian-hsmm"
Issues = "https://github.com/SuryaThirukonda/gaussian-hsmm/issues"
Changelog = "https://github.com/SuryaThirukonda/gaussian-hsmm/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gaussian_hsmm = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "gaussian_hsmm.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["gaussian_hsmm"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["src/gaussian_hsmm"]
strict = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["hmmlearn.*", "scipy.*", "sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gaussian_hsmm.model"
# scikit-learn does not currently expose enough type information for mypy to
# prove that its BaseEstimator is a valid typed base class.
disable_error_code = ["misc"]
